--- a/styles.css
+++ b/styles.css
@@ -124,3 +124,23 @@ height:100px;;
   margin: 10px;
   background-color: white;
 }
+
+@media (max-width: 600px) {
+
+  h1 {
+    font-size: 3rem;
+    color: #DBEDF3;
+    font-family: "Arvo", cursive;
+    text-shadow: 3px 0 #DA0463;
+  
+  }
+
+  body {
+      font-size: 14px;
+      /* other styles for mobile */
+  }
+  .drum {
+      /* adjust button sizes, margins, etc., for mobile */
+  }
+  /* additional mobile-specific styles */
+}
